210810 | add effective typescript Item28 contents

--- a/09_ts/04_effective_typescript/Item24-28.md
+++ b/09_ts/04_effective_typescript/Item24-28.md
@@ -351,4 +351,126 @@ callWithRandomNumbers(fn);
 
 ## Item28. 유효한 상태만 표현하는 타입을 지향하기
 
-(작성중...)
+- 효과적으로 타입을 설계하려면, 유효한 상태만 표현할 수 있는 타입을 만들어 내는 것이 가장 중요하다.
+  - 유효한 상태와 무효한 상태를 둘 다 표현하는 타입은 혼란을 초래하기 쉽고 오류를 유발하게 된다.
+- 유효한 상태만 표현하는 타입을 지향해야 한다.
+  - 코드가 길어지거나 표현하기 어렵지만 결국은 시간을 절약하고 고통을 줄일 수 있다.
+
+---
+
+### :star: [예시] 페이지 내용 로드 후 화면에 표시하는 코드
+
+#### :round_pushpin: before
+
+```typescript
+interface State {
+  pageText: string;
+  isLoading: boolean;
+  error?: string;
+}
+```
+
+```typescript
+function renderPage(state: State) {
+  if (state.error) {
+    return `Error! Unable to load ${currentPage}: ${state.error}`;
+  } else if (state.isLoading) {
+    return `Loading ${currentPage}...`;
+  }
+    
+  return `<h1>${currentPage}</h1>\n${state.pageText}`;
+}
+```
+
+```typescript
+async function changePage(state: State, newPage: string) {
+  state.isLoading = true;
+    
+  try {
+    const response = await fetch(getUrlForPage(newPage));
+      
+    if (!response.ok) {
+      throw new Error(`Unable to load ${newPage}: ${response.statusText}`);
+    }
+      
+    const text = await response.text();
+    state.isLoading = false;
+    state.pageText = text;
+  } catch (e) {
+    state.error = '' + e;
+  }
+}
+```
+
+- 위 함수들은 문제점이 존재한다.
+  - 상태 값의 두 가지 속성이 동시에 정보가 부족하거나(요청이 실패한 것인지 여전히 로딩 중인지 알 수 없음), 두 가지 속성이 충돌(오류이면서 동시에 로딩 중일 수 있음)할 수 있다.
+  - `State` 타입은 `isLoading`이 `true` 이고 동시에 `error` 값이 존재하는 무효한 상태를 허용한다.
+  - 무효한 상태가 존재하면 위 두 함수를 제대로 구현할 수 없다.
+
+<br>
+
+#### :round_pushpin: after
+
+- 네트워크 요청 과정 각각의 상태를 명시적으로 모델리하는 태그된 유니온을 사용
+
+```typescript
+interface RequestPending {
+  state: 'pending';
+}
+
+interface RequestError {
+  state: 'error';
+  error: string;
+}
+
+interface RequestSuccess {
+  state: 'ok';
+  pageText: string;
+}
+
+type RequestState = RequestPending | RequestError | RequestSuccess;
+
+interface State {
+  currentPage: string;
+  request: { [page: string]: RequestState };
+}
+```
+
+```typescript
+function renderPage(state: State) {
+  const { currentPage } = state;
+  const requestState = state.requests[currentPage];
+  
+  switch (requestState.state) {
+    case 'pending':
+      return `Loading ${currentPage}...`;
+    case 'error':
+      return `Error! Unable to load ${currentPage}: ${requestState.error}`;
+    case 'ok':
+      return `<h1>${currentPage}</h1>\n${state.pageText}`;
+  }
+}
+```
+
+```typescript
+async function changePage(state: State, newPage: string) {
+  state.requests[newPage] = { state: 'pending' };
+  state.currentPage = newPage;
+    
+  try {
+    const response = await fetch(getUrlForPage(newPage));
+      
+    if (!response.ok) {
+      throw new Error(`Unable to load ${newPage}: ${response.statusText}`);
+    }
+      
+    const text = await response.text();
+    state.requests[newPage] = { state: 'ok', pageText };
+  } catch (e) {
+    state.requests[newPage] = { state: 'error', error: '' + e };
+  }
+}
+```
+
+---
+
