210816 | add effective typescript Item30 contents

--- a/09_ts/04_effective_typescript/Item29-33.md
+++ b/09_ts/04_effective_typescript/Item29-33.md
@@ -88,3 +88,32 @@ declare function setCamera(camera: CameraOptions): void;
 declare function viewportForBounds(bounds: LngLatBounds): Camera;
 ```
 
+<br>
+
+## Item30. 문서에 타입 정보를 쓰지 않기
+
+- 타입스크립트의 타입 구문 시스템은 간결하고, 구체적이며, 쉽게 읽을 수 있도록 설계되어있다.
+  - 함수의 입력과 출력의 타입을 코드로 표현하는 것이 주석보다 더 나은 방법이라는 것은 자명하다.
+- 누군가 강제하지 않는 이상 주석ㅇ은 코드와 동기화되지 않는다.
+  - 주석 대신 타입 정보를 작성한다면 코드가 변경된다 하더라도 정보가 정확히 동기화된다.
+- 특정 매개변수를 설명하고 싶다면 JSDoc의 `@param` 구문을 사용하면 된다.
+- 값을 변경하지 않는다고 설명하는 주석도 좋지 않다.
+  - 또한 매개변수르 변경하지 않는다는 주석도 사용하지 않는 것이 좋다.
+  - 그 대신, `readonly`로 선언하여 타입스크립트가 규칙을 강제할 수 있게 하면 된다.
+- 변수명에 타입 정보를 넣지 않도록 한다.
+  - 예를 들어 변수명 `ageNum`으로 하는 것보다는 `age`로 하고, 그 타입이 `number`임을 명시하는게 좋다.
+  - 그러나 단위가 있는 숫자들은 예외이다. 단위가 무엇인지 확실하지 않다면 변수명 또는 속성 이름에 단위를 포함할 수 있다.
+
+---
+
+- **주석과 변수명에 타입 정보를 적는 것은 피해야 한다.**
+  - 타입 선언이 중복되는 것으로 끝나면 다행이지만 최악의 경우는 타입 정보에 모순이 발생하게 된다.
+- **타입이 명확하지 않은 경우는 변수명에 단위 정보를 포함하는 것을 고려하는 것이 좋다.** (예를 드러 `timeMs` 또는 `temperatureC`)
+
+---
+
+<br>
+
+## Item31. 타입 주변에 `null` 값 배치하기
+
+(작성중...)
