--- a/09_ts/04_effective_typescript/Item44-48.md
+++ b/09_ts/04_effective_typescript/Item44-48.md
@@ -58,4 +58,58 @@ const pt2 = someMethod(pt1, someSymbol); // 정상, pt2의 타입이 any
 
 ## Item45. `devDependencies`에 `typescript`와 `@types` 추가하기
 
+### (1) `npm`의 세 가지 종류의 의존성
+
+- `dependencies`
+  - 현재 프로젝트를 실행하는 데 필수적인 라이브러리들이 포함
+  - 프로젝트의 런타임에 `lodash`가 사용된다면 여기에 포함되어야 함
+  - 프로젝트를 `npm`에 공개하여 다른 사용자가 해당 프로젝트를 설치한다면, `dependencies`에 들어 있는 라이브러리도 함께 설치될 것이다.
+  - 이러한 현상을 전이(transitive) 의존성이라고 한다.
+- `devDependencies`
+  - 현재 프로젝트를 개발하고 테스트하는 데 사용되지만, 런타임에는 필요 없는 라이브러리들이 포함
+    - 예를 들어, 프로젝트에서 사용 중인 테스트 프레임워크가 여기에 포함된다.
+  - 프로젝트를 `npm`에 공개하여 다른 사용자가 해당 프로젝트를 설치한다면, `devDependencies`에 포함된 라이브러리들은 제외된다.
+- `peerDependencies`
+  - 런타임에 필요하긴 하지만, 의존성을 직접 관리하지 않는 라이브러리들이 포함
+    - 단적인 예로 플러그인을 들 수 있다.
+  - jQuery의 플러그인은 다양한 버전의 jQuery와 호환되므로 jQuery의 버전을 플러그인에서 직접 선택하지 않고, 플러그인이 사용되는 실제 프로젝트에서 선택하도록 만들 때 사용한다
+
+<br>
+
+### (2) typescript 환경에서 `npm` 의존성 관리
+
+:checkered_flag: <b>타입스크립트 자체 의존성 고려</b>
+
+- 타입스크립트를 시스템 레벨로 설치할 수도 있지만, 다음 두 가지 이유 때문에 추천하지 않는다.
+  - 팀원들 모두가 항상 동일한 버전을 설치한다는 보장이 없다.
+  - 프로젝트를 셋업할 때 별도의 단계가 추가된다.
+- 따라서 **<u>타입스크립트를 시스템 레벨로 설치하기보다는 `devDependencies`에 넣는 것이 좋다.</u>**
+- 여기에 포함된다면 `npm install`을 실행할 때 팀원들 모두 항상 정확한 버전의 타입스크립트를 설치할 수 있다.
+
+:checkered_flag: <b> 타입 의존성(`@types`)을 고려</b>
+
+- 사용하려는 라이브러리에 타입 선언이 포함되어 있지 않아도, `DefinitelyTyped`에서 타입 정보를 얻을 수 있다.
+- `DefinitelyTyped`의 타입 정의들은 `npm` 레지스트리의 `@types` 스코프에 공개된다.
+- 참고로, `@types` 라이브러리는 타입 정보만 포함하고 있으며 구현체는 포함하지 않는다.
+- 원본 라이브러리 자체가 `dependencies`에 있더라도 **<u>`@types` 의존성은 `devDependencies`에 있어야 한다.</u>**
+
+```json
+{
+    "devDependencies": {
+        "@types/react": "^16.8.19",
+        "typescript": "^3.5.3"
+    },
+    "dependencies": {
+        "react": "^16.8.6"
+    }
+}
+```
+
+- 위 예제는 런타임에 `@types/react`와 `typescript`에 의존하지 않겠다는 것이다.
+- 만일 런타임에 `@types`가 필요한 경우라면 별도의 작업이 필요할 수 있다.
+
+<br>
+
+## Item46. 타입 선언과 관련된 세 가지 버전 이해하기
+
 (작성중...)
