--- a/09_ts/04_effective_typescript/Item44-48.md
+++ b/09_ts/04_effective_typescript/Item44-48.md
@@ -112,4 +112,47 @@ const pt2 = someMethod(pt1, someSymbol); // 정상, pt2의 타입이 any
 
 ## Item46. 타입 선언과 관련된 세 가지 버전 이해하기
 
-(작성중...)
+### (1) 실제 라이브러리와 타입 정보의 버전이 별도로 관리되는 방식의 문제점
+
+- 라이브러리를 업데이트했지만 실수로 타입 선언은 업데이트하지 않은 경우
+  - 업데이트해야 할 타입 선언의 버전이 아직 준비되지 않은 경우 보강 기법으로 사용하려는 새 함수와 메서드의 타입 정보를 프로젝트 자체에 추가하거나 타입 선언의 업데이트를 직접 작성하고 공개하여 커뮤니티에 기여한다.
+- 라이브러리보다 타입 선언의 버전이 최신인 경우
+  - 라이브러리와 타입 선언의 버전이 맞도록 라이브러리 버전을 올리거나 타입 선언의 버전을 내린다.
+- 프로젝트에서 사용하는 타입스크립트 버전보다 라이브러리에서 필요로 하는 타입스크립트 버전이 최신인 경우
+  - 타입스크립트의 최신 버전을 사용하자.
+- `@types` 의존성이 중복될 수 있다.
+
+<br>
+
+### (2) 번들링 방식의 문제점
+
+- 번들된 타입 선언에 보강 기법으로 해결할 수 없는 오류가 있는 경우, 또는 공개 시점에는 잘 동작했지만 타입스크립트 버전이 올라가면서 오류가 발생하는 경우에 문제가 된다.
+- 프로젝트 내의 타입 선언이 다른 라이브러리의 타입 선언에 의존한다면 문제가 된다.
+- 프로젝트의 과거 버전에 있는 타입 선언에 문제가 있는 경우에는 과거 버전을 돌아가서 패치 업데이트를 해야 한다.
+- 타입 선언의 패치 업데이트를 자주 하기 어렵다는 문제가 있다.
+
+---
+
+### :pushpin: 정리
+
+- 타입 선언을 라이브러리에 포함하는 것과 DefinitelyTyped에 공개하는 것 사이의 장단점을 이해해야 한다.
+- 타입스크립트로 작성된 라이브러리라면 타입 선언을 자체적으로 포함하고, 자바스크립트로 작성된 라이브러리라면 타입 선언을 DefinitelyTyped에 공개하는 것이 좋다.
+
+---
+
+<br>
+
+## Item47. 공개 API에 등장하는 모든 타입을 익스포트하기
+
+- 공개 메서드에 등장한 어떤 형태의 타입이든 익스포트하자.
+  - 어차피 라이브러리 사용자가 추출할 수 있으므로, 익스포트하기 쉽게 만드는 것이 좋다.
+
+<br>
+
+## Item48. API 주석에 TSDoc 사용하기
+
+- 사용자를 위한 문서라면 JSDoc 스타일의 주석으로 만드는 것이 좋다.
+  - 왜냐하면 대부분의 편집기는 함수가 호출되는 곳에서 함수에 붙어 있는 JSDoc 스타일의 주석을 툴팁으로 표시해 주기 때문이다.
+- 주석을 수필처럼 장황하게 쓰지 않도록 주의해야 한다.
+  - 훌륭한 주석은 간단히 요점만 언급한다.
+- JSDoc에는 타입 정보를 명시하는 규칙(`@param {string} name ...`)이 있지만, 타입스크립트에서는 타입 정보가 코드에 있기 때문에 TSDoc에서는 타입 정보를 명시하면 안 된다.
